<resources>
    <string name="app_name">SampleServiceBookingApp</string>
    <string name="label_home">Home</string>
    <string name="label_services">Services</string>
    <string name="arg_category">serviceType</string>
    <string name="label_services_upper_case">SERVICES</string>
    <string name="label_profile">Profile</string>
    <string name="label_help">Help</string>
    <string name="label_set_your_address">Set Your Address</string>
    <string name="label_hello">Hello</string>
    <string name="label_book_now">Book Now!</string>
    <string name="label_book_slogan">You can book the desired service and get the best quality!</string>
    <string name="label_promotion_uppercase">PROMOTION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>